2002-10-22  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (install-gdbtk): Add missing continuation backslash to
	insure that shell variables, such as "transformed_name" are propagated
	to later shell statements in rule.

2002-10-20  Mark Kettenis  <kettenis@gnu.org>

	* configure.tgt (i[3456]86-*-openbsd*): Set gdb_target to obds.
	* config/i386/obsd.mt: New file.
	* i386bsd-nat.c (_initialize_i386bsd_nat): Introduce
	i386obsd_sc_pc_offset and i386obsd_sc_sp_offset;
	* i386obsd-nat.c (_initialize_i386obsd_nat): Set
	i386obsd_sigtramp_start and i386obsd_sigtramp_end instead of
	i386nbsd_sigtramp_start and i386nbsd_sigtramp_end.
	* i386obsd-tdep.c: New file.

	* solib-sunos.c (allocate_rt_common_objfile): Use bcache_xmalloc
	to allocate partial syms and macro byte caches.

2002-10-02  Daniel Jacobowitz  <drow@mvista.com>

	Fix PR gdb/778
	* gdbtypes.c (fill_in_vptr_fieldno): Call check_typedef
	before recursing.
	* gnu-v3-abi.c (gnuv3_virtual_fn_field): Check return value
	of fill_in_vptr_fieldno.

2002-10-01  Alexandre Oliva  <aoliva@redhat.com>

	* mips-tdep.c (mips_find_abi_section): .mdebug.abi64 is the name
	of the section for the N64 ABI, fixed.

	* config/mips/tm-irix6.h: Include solib.h.

2002-10-01  Andrew Cagney  <ac131313@redhat.com>

	* rs6000-tdep.c (rs6000_gdbarch_init): For powerpc:7400, fix
	"vrsave"'s register number.

2002-09-29  Andrew Cagney  <ac131313@redhat.com>

	* config/djgpp/fnchange.lst: Rename i386gnu-nat.c and
	i386gnu-tdep.c.

2002-09-29  Andrew Cagney  <ac131313@redhat.com>

	* gnu-nat.h (debug): Use __FILE__ and __LINE__ instead of
	__FUNCTION__.
	* gnu-nat.c (do_mach_notify_no_senders): Replace __FUNCTION__
	with function name.
	(do_mach_notify_port_deleted, do_mach_notify_msg_accepted): Ditto.
	(do_mach_notify_port_destroyed, do_mach_notify_send_once): Ditto.
	(S_proc_setmsgport_reply, S_proc_getmsgport_reply): Ditto.
	(S_msg_sig_post_reply): Ditto.
	
2002-09-28  Andrew Cagney  <ac131313@redhat.com>

	Import from mainline:
